@@ -892,7 +892,7 @@ $2 List redirects &nbsp; Search for $3 $9",
 'timezoneoffset' => 'Offset¹',
 'servertime'	=> 'Server time',
 'guesstimezone' => 'Fill in from browser',
-'emailflag'		=> 'Disable email from other users',
+'emailflag'		=> 'Enable email from other users',
 'defaultns'		=> 'Search in these namespaces by default:',
 'default'		=> 'default',
 'files'			=> 'Files',
