@@ -190,15 +190,20 @@ li#pt-login {
 * html #column-one { right: 0; }
 
 /* js pref toc */
-#preftoc { float: right; }
-/* workaround for moz bug, displayed bullets on left side */
-#preftoc li { list-style: none; }
-#prefcontrol { float: right; }
-fieldset.prefsection,
-fieldset.operaprefsection { 
-    margin-left: 0 !important;
-    margin-right: 15em;
+
+#preftoc {
+    margin-right: 1em;
 }
+
+.preferences-save-success, #preftoc li, .prefsection fieldset {
+    float: right;
+}
+
+.prefsection {
+    padding-right: 2em;
+}
+
+/* workaround for moz bug, displayed bullets on left side */
 
 #toc ul {
     text-align: right;
