@@ -143,6 +143,7 @@ fully support the editing toolbar, but was found to be too confusing.
 * (bug 3163) Full translation of LanguageBr
 * (bug 3617) Update for portuguese language (pt)
 * Namespaces hacks on LanguagePl
+* New preferences design and reorganisation
 
 
 === Caveats ===
